# nextcord

./: .aliasignorerc  .coverage  .gitignore  .libcst.codemod.yaml  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.ja.rst  README.rst  alias_license.py  aliasgen.py  h.py  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  speedify  task.env  test.py  unaliased-setup.py
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  unaliased_health_check.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  ported_issue.yml
.github/workflows/: build.yml  codeql-analysis.yml  docs.yml  format.yml  lint.yml  publish.yml  python-publish.yml
discord/: __init__.py  abc.py  activity.py  appinfo.py  application_command.py  asset.py  audit_logs.py  auto_moderation.py  backoff.py  bans.py  channel.py  client.py  colour.py  components.py  context_managers.py  cooldowns.py  embeds.py  emoji.py  enums.py  errors.py  file.py  flags.py  gateway.py  guild.py  health_check.py  http.py  integrations.py  interactions.py  invite.py  iterators.py  member.py  mentions.py  message.py  mixins.py  object.py  oggparse.py  opus.py  partial_emoji.py  permissions.py  player.py  (+16 more)
discord/ext/application_checks/: __init__.py  core.py  errors.py
discord/ext/commands/: __init__.py  _types.py  bot.py  cog.py  context.py  converter.py  cooldowns.py  core.py  errors.py  flags.py  help.py  view.py
discord/ext/slash_utils/: __init__.py  slash.py
discord/ext/tasks/: __init__.py
discord/types/: __init__.py  activity.py  appinfo.py  audit_log.py  auto_moderation.py  channel.py  components.py  embed.py  emoji.py  gateway.py  guild.py  integration.py  interactions.py  invite.py  member.py  message.py  raw_models.py  role.py  scheduled_events.py  snowflake.py  sticker.py  team.py  template.py  threads.py  user.py  voice.py  webhook.py  welcome_screen.py  widget.py
discord/ui/: __init__.py  button.py  item.py  modal.py  select.py  text_input.py  view.py
discord/webhook/: __init__.py  async_.py  sync.py
docs/: Makefile  api.rst  cogs.rst  conf.py  discord.rst  faq.rst  index.rst  intents.rst  interactions.rst  intro.rst  logging.rst  make.bat  migrating.rst  migrating_2.rst  migrating_to_async.rst  migrating_to_nextcord.rst  migrating_to_slash_commands.rst  quickstart.rst  requirements.txt  version_guarantees.rst  whats_new.rst
docs/_static/: scorer.js  style.css
docs/_templates/: genindex.html  layout.html
docs/client/: cogs.rst  decorators.rst  index.rst  interactions.rst
docs/ext/alternative/: index.rst
docs/ext/application_checks/: index.rst
docs/ext/commands/: api.rst  cogs.rst  commands.rst  extensions.rst  index.rst
docs/ext/converters/: index.rst
docs/ext/events/: index.rst
docs/ext/getch/: index.rst
docs/ext/ipc/: index.rst
docs/extensions/: attributetable.py  builder.py  details.py  exception_hierarchy.py  nitpick_file_ignorer.py  resourcelinks.py
examples/: InteractionResponse.py  InteractionSubCommands.py  InterationResponse.py  background_task.py  background_task_asyncio.py  basic_bot.py  basic_voice.py  converters.py  custom_context.py  custom_interaction.py  deleted.py  edits.py  guessing_game.py  head_or_tails.py  new_member.py  polls.py  reaction_roles.py  receive_vc_audio.py  replit_token_storage.py  reply.py  secret.py  secure_token_storage.py  slash_voice.py  voice_recording.py  webhook.py  webhook_via_bot.py
examples/application_commands/: autocompleted_command.py  choices.py  cog_example.py  context_menus.py  localization.py  message_command.py  options.py  slash_basic.py  slash_command.py  sub_commands.py  user_command.py  user_installed_command.py
examples/modals/: modal.py  persistent.py
examples/views/: channel_select.py  confirm.py  counter.py  disable_view.py  dropdown.py  ephemeral.py  link.py  persistent.py  tic_tac_toe.py
nextcord/: __init__.py  __main__.py  _cog.py  abc.py  activity.py  appinfo.py  application_command.py  asset.py  audit_logs.py  auto_moderation.py  automod.py  backoff.py  bans.py  cache.py  channel.py  checks.py  client.py  cog.py  colour.py  command_client.py  components.py  componentsv2.py  context_managers.py  embeds.py  emoji.py  entitlement.py  enums.py  errors.py  events.py  file.py  flags.py  gateway.py  guild.py  guild_onboarding.py  guild_preview.py  health_check.py  http.py  integrations.py  interactions.py  invite.py  (+38 more)
nextcord/endpoint/: __init__.py  base.py  oauth.py  role_conn_verify.py
nextcord/ext/: _types.py  bot_base.py  cog.py  command_base.py  context.py  endpoint  errors.py
nextcord/interactions/: __init__.py  application.py  application_interactions.py  base.py  message_component.py  message_component_interaction.py  modal_submit.py  modal_submit_interaction.py
nextcord/types/: __init__.py  activity.py  appinfo.py  audit_log.py  auto_moderation.py  automod.py  channel.py  checks.py  components.py  embed.py  emoji.py  entitlement.py  gateway.py  guild.py  integration.py  interactions.py  invite.py  member.py  message.py  polls.py  raw_models.py  role.py  role_connections.py  scheduled_events.py  snowflake.py  soundboard.py  sticker.py  team.py  template.py  threads.py  user.py  voice.py  webhook.py  welcome_screen.py  widget.py
nextcord/ui/: __init__.py  _types.py  action_row.py  button.py  channel_select.py  container.py  file.py  file_upload.py  item.py  label.py  media_gallery.py  mentionable_select.py  modal.py  role_select.py  section.py  select.py  separator.py  text_display.py  text_input.py  thumbnail.py  user_select.py  view.py
nextcord/voice_recording/: __init__.py  cleanup.py  core.py  decrypter.py  errors.py  exporters.py  opus.py  shared.py
nextcord/voicerec/: __init__.py  core.py  decrypter.py  errors.py  exporters.py  opus.py  shared.py
nextcord/webhook/: __init__.py  async_.py  sync.py
scripts/: autotyping.py
scripts/versioner/: plugin.py  pyproject.toml
test/: bot.py
tests/: test_abc.py  test_test.py
voicerec/: __init__.py  core.py  decrypter.py  opus.py
(+204 files in other folders)
